feat(ddc): refresh YAML configuration by property leaf