@@ -1,10 +1,14 @@
 package top.egon.cola.component.ddc.service;
 
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.core.env.ConfigurableEnvironment;
+import org.springframework.mock.env.MockEnvironment;
 import top.egon.cola.component.ddc.client.DdcAdminClient;
 import top.egon.cola.component.ddc.common.DdcChecksum;
-import top.egon.cola.component.ddc.common.DdcException;
+import top.egon.cola.component.ddc.common.DdcValueConverter;
+import top.egon.cola.component.ddc.environment.DdcDynamicPropertySource;
+import top.egon.cola.component.ddc.environment.DdcYamlPropertySourceLoader;
 import top.egon.cola.component.ddc.model.dto.DdcAckRequest;
 import top.egon.cola.component.ddc.model.dto.DdcDefaultReportRequest;
 import top.egon.cola.component.ddc.model.dto.DdcHeartbeatRequest;
@@ -12,285 +16,351 @@ import top.egon.cola.component.ddc.model.dto.DdcInstanceRegisterRequest;
 import top.egon.cola.component.ddc.model.dto.DdcPublishMessage;
 import top.egon.cola.component.ddc.model.dto.DdcPublishTarget;
 import top.egon.cola.component.ddc.model.enums.DdcAckStatus;
-import top.egon.cola.component.ddc.model.enums.DdcLeaseOperationStatus;
-import top.egon.cola.component.ddc.model.enums.DdcLeaseRole;
 import top.egon.cola.component.ddc.model.vo.DdcConfigValue;
 import top.egon.cola.component.ddc.model.vo.DdcLeaseOperationResult;
 import top.egon.cola.component.ddc.model.vo.DdcLeaseSession;
-
-import java.time.Instant;
+import top.egon.cola.component.ddc.refresh.DdcConfigurationChangedEvent;
+import top.egon.cola.component.ddc.refresh.DdcConfigurationPropertiesRebinder;
+import top.egon.cola.component.ddc.refresh.DdcYamlConfigApplier;
 import top.egon.cola.component.ddc.repository.DdcLocalConfigRepository;
 
-import java.util.Collections;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 class DdcRefreshServiceTest {
 
-    @Test
-    void targetMessageSubmitsAckToLifecycleDelivery() {
-        DdcAckDelivery delivery = mock(DdcAckDelivery.class);
-        when(delivery.submit(any())).thenReturn(true);
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        DdcConfigApplier applier = (key, value, version) -> {
-        };
-        DdcRefreshService service = new DdcRefreshService(
-                repository,
-                new DefaultDdcConfigApplierRegistry(applier),
-                delivery,
-                sessionHolder()
-        );
-
-        service.refresh(message("switch", "on", 2L));
-
-        ArgumentCaptor<DdcAckRequest> ack =
-                ArgumentCaptor.forClass(DdcAckRequest.class);
-        verify(delivery).submit(ack.capture());
-        assertThat(ack.getValue()).satisfies(request -> {
-            assertThat(request.getChangeId()).isEqualTo("c1");
-            assertThat(request.getStatus()).isEqualTo(DdcAckStatus.SUCCESS);
-            assertThat(request.getInstanceId()).isEqualTo("instance-1");
-            assertThat(request.getLeaseId()).isEqualTo("lease-1");
-        });
-    }
+    private static final String INITIAL_YAML = """
+            feature:
+              enabled: false
+              label: old
+            """;
 
     @Test
-    void batchSnapshotAppliesByPriorityThenConfigKey() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        List<String> applied = new ArrayList<>();
-        DdcConfigApplier fallback = (key, value, version) -> applied.add(key);
-        DefaultDdcConfigApplierRegistry registry =
-                new DefaultDdcConfigApplierRegistry(fallback);
-        registry.registerPrefix(
-                "gateway.rules.chunk.",
-                (key, value, version) -> applied.add(key)
-        );
-        registry.registerExact(
-                "gateway.rules.active",
-                new DdcConfigApplier() {
-                    @Override
-                    public void apply(String key, String value, long version) {
-                        applied.add(key);
-                    }
-
-                    @Override
-                    public int priority() {
-                        return 100;
-                    }
-                }
-        );
-        registry.freeze();
-        DdcLeaseSessionHolder holder = new DdcLeaseSessionHolder();
-        DdcRefreshService service =
-                new DdcRefreshService(repository, registry, client, holder);
-
-        service.applySnapshots(List.of(
-                config("gateway.rules.active", "release-1", 1L),
-                config("gateway.rules.chunk.002", "chunk-2", 1L),
-                config("gateway.rules.chunk.001", "chunk-1", 1L)
+    void appliesYamlLeavesAndReportsChangeClassification() throws Exception {
+        AtomicReference<String> applied = new AtomicReference<>();
+        Harness harness = harness(registry -> registry.registerExact(
+                "feature.enabled",
+                (key, value, version) -> applied.set(value)
         ));
 
-        assertThat(applied).containsExactly(
-                "gateway.rules.chunk.001",
-                "gateway.rules.chunk.002",
-                "gateway.rules.active"
-        );
-    }
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: true
+                  label: new
+                """, 2L));
 
-    @Test
-    void snapshotAppliesWithoutAckAndOlderSnapshotCannotOverwriteTopicValue() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        AtomicReference<String> value = new AtomicReference<>();
-        DdcRefreshService service = service(repository, (key, next, version) -> {
-            value.set(next);
-            repository.updateVersion(key, version);
-        }, client);
-
-        service.refresh(message("switch", "new", 2L));
-        service.applySnapshot(config("switch", "old", 1L));
-
-        assertThat(value).hasValue("new");
-        assertThat(client.ackCount).isEqualTo(1);
-    }
-
-    @Test
-    void targetMessageSendsLeaseAwareSuccessAndNonTargetDoesNothing() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        DdcRefreshService service = service(repository, (key, value, version) ->
-                repository.updateVersion(key, version), client);
-
-        service.refresh(message("switch", "on", 2L));
-
-        assertThat(client.lastAck()).satisfies(ack -> {
+        assertThat(harness.environment.getProperty(
+                "feature.enabled",
+                Boolean.class
+        )).isTrue();
+        assertThat(applied).hasValue("true");
+        assertThat(harness.client.lastAck()).satisfies(ack -> {
             assertThat(ack.getStatus()).isEqualTo(DdcAckStatus.SUCCESS);
-            assertThat(ack.getInstanceId()).isEqualTo("instance-1");
-            assertThat(ack.getLeaseId()).isEqualTo("lease-1");
-            assertThat(ack.getContentChecksum()).isNotBlank();
+            assertThat(ack.getCurrentVersion()).isEqualTo(2L);
+            assertThat(ack.getConfigKey()).isEqualTo("application.yml");
+        });
+        assertThat(harness.events).singleElement().satisfies(event -> {
+            assertThat(event.changedKeys()).containsExactlyInAnyOrder(
+                    "feature.enabled",
+                    "feature.label"
+            );
+            assertThat(event.refreshedKeys()).containsExactly(
+                    "feature.enabled"
+            );
+            assertThat(event.restartRequiredKeys()).containsExactly(
+                    "feature.label"
+            );
+            assertThat(event.changeId()).isEqualTo("change-1");
+        });
+    }
+
+    @Test
+    void configDataSnapshotSeedsMetadataAndPreventsDuplicateReconcile()
+            throws Exception {
+        AtomicInteger applyCount = new AtomicInteger();
+        Harness harness = harness(registry -> registry.registerExact(
+                "feature.enabled",
+                (key, value, version) -> applyCount.incrementAndGet()
+        ));
+
+        harness.service.applySnapshots(List.of(
+                harness.config(INITIAL_YAML, 1L)
+        ));
+
+        assertThat(applyCount).hasValue(0);
+        assertThat(harness.events).isEmpty();
+        assertThat(harness.repository.version("application.yml"))
+                .isEqualTo(1L);
+        assertThat(harness.repository.checksum("application.yml"))
+                .isEqualTo(DdcChecksum.content(INITIAL_YAML));
+    }
+
+    @Test
+    void initializesExplicitAppliersFromTheConfigDataSnapshot()
+            throws Exception {
+        AtomicReference<String> applied = new AtomicReference<>();
+        Harness harness = harness(registry -> registry.registerExact(
+                "feature.enabled",
+                (key, value, version) -> applied.set(value + ':' + version)
+        ));
+
+        harness.yamlConfigApplier.afterSingletonsInstantiated();
+
+        assertThat(applied).hasValue("false:1");
+        assertThat(harness.events).isEmpty();
+    }
+
+    @Test
+    void sameVersionConflictFailsWithoutChangingLastKnownGood()
+            throws Exception {
+        AtomicInteger applyCount = new AtomicInteger();
+        Harness harness = harness(registry -> registry.registerExact(
+                "feature.enabled",
+                (key, value, version) -> applyCount.incrementAndGet()
+        ));
+
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: true
+                """, 1L));
+
+        assertThat(applyCount).hasValue(0);
+        assertThat(harness.client.lastAck().getStatus())
+                .isEqualTo(DdcAckStatus.FAILED);
+        assertThat(harness.environment.getProperty(
+                "feature.enabled",
+                Boolean.class
+        )).isFalse();
+        assertThat(harness.events).isEmpty();
+    }
+
+    @Test
+    void reservedKeyRejectsWholeDocumentAndRestoresMetadata()
+            throws Exception {
+        Harness harness = harness(registry -> {
         });
 
-        DdcPublishMessage nonTarget = message("switch", "off", 3L);
-        nonTarget.setTargets(List.of(new DdcPublishTarget("other", "other-lease")));
-        service.refresh(nonTarget);
-        assertThat(client.ackCount).isEqualTo(1);
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: true
+                egon:
+                  cola:
+                    component:
+                      ddc:
+                        enabled: false
+                """, 2L));
+
+        assertThat(harness.client.lastAck().getStatus())
+                .isEqualTo(DdcAckStatus.FAILED);
+        assertThat(harness.client.lastAck().getErrorMessage())
+                .contains("reserved key")
+                .doesNotContain("enabled: false");
+        assertThat(harness.environment.getProperty(
+                "feature.enabled",
+                Boolean.class
+        )).isFalse();
+        assertThat(harness.repository.version("application.yml"))
+                .isEqualTo(1L);
+        assertThat(harness.events).isEmpty();
     }
 
     @Test
-    void sameVersionAndChecksumReportsSuccessWithoutApplyingAgain() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        AtomicInteger applyCount = new AtomicInteger();
-        DdcRefreshService service = service(repository, (key, value, version) -> {
-            applyCount.incrementAndGet();
-            repository.updateVersion(key, version);
-        }, client);
-        DdcPublishMessage message = message("switch", "on", 2L);
+    void leafApplyFailureRestoresYamlSnapshotAndMetadata()
+            throws Exception {
+        Harness harness = harness(registry -> registry.registerExact(
+                "feature.enabled",
+                (key, value, version) -> {
+                    throw new IllegalStateException("domain apply failed");
+                }
+        ));
 
-        service.refresh(message);
-        service.refresh(message);
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: true
+                  label: new
+                """, 2L));
 
-        assertThat(applyCount).hasValue(1);
-        assertThat(client.lastAck().getStatus()).isEqualTo(DdcAckStatus.SUCCESS);
+        assertThat(harness.client.lastAck().getStatus())
+                .isEqualTo(DdcAckStatus.FAILED);
+        assertThat(harness.client.lastAck().getErrorMessage())
+                .contains("domain apply failed");
+        assertThat(harness.environment.getProperty(
+                "feature.enabled",
+                Boolean.class
+        )).isFalse();
+        assertThat(harness.environment.getProperty("feature.label"))
+                .isEqualTo("old");
+        assertThat(harness.repository.version("application.yml"))
+                .isEqualTo(1L);
+        assertThat(harness.events).isEmpty();
     }
 
     @Test
-    void sameVersionWithDifferentChecksumReportsFailedAndKeepsLastKnownGoodValue() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        repository.updateVersion("switch", 2L);
-        repository.updateChecksum("switch", DdcChecksum.content("old"));
-        AtomicInteger applyCount = new AtomicInteger();
-        DdcRefreshService service = service(repository, (key, value, version) ->
-                applyCount.incrementAndGet(), client);
+    void rebinderResultParticipatesInRefreshClassification()
+            throws Exception {
+        DdcConfigurationPropertiesRebinder rebinder =
+                mock(DdcConfigurationPropertiesRebinder.class);
+        when(rebinder.rebind(any(), any()))
+                .thenReturn(Set.of("feature.label"));
+        Harness harness = harness(registry -> {
+        }, rebinder, event -> {
+        });
 
-        service.refresh(message("switch", "new", 2L));
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: false
+                  label: rebound
+                """, 2L));
 
-        assertThat(applyCount).hasValue(0);
-        assertThat(repository.version("switch")).isEqualTo(2L);
-        assertThat(repository.checksum("switch")).isEqualTo(DdcChecksum.content("old"));
-        assertThat(client.lastAck().getStatus()).isEqualTo(DdcAckStatus.FAILED);
-        assertThat(client.lastAck().getCurrentVersion()).isEqualTo(2L);
+        assertThat(harness.events).singleElement().satisfies(event -> {
+            assertThat(event.refreshedKeys()).containsExactly(
+                    "feature.label"
+            );
+            assertThat(event.restartRequiredKeys()).isEmpty();
+        });
     }
 
     @Test
-    void olderTopicMessageReportsIgnoredWithoutApplying() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        repository.updateVersion("switch", 3L);
-        AtomicInteger applyCount = new AtomicInteger();
-        DdcRefreshService service = service(repository, (key, value, version) ->
-                applyCount.incrementAndGet(), client);
+    void eventListenerFailureDoesNotFailAcceptedConfiguration()
+            throws Exception {
+        Harness harness = harness(
+                registry -> {
+                },
+                mock(DdcConfigurationPropertiesRebinder.class),
+                event -> {
+                    throw new IllegalStateException("listener failed");
+                }
+        );
 
-        service.refresh(message("switch", "old", 2L));
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: true
+                """, 2L));
 
-        assertThat(applyCount).hasValue(0);
-        assertThat(client.lastAck().getStatus()).isEqualTo(DdcAckStatus.IGNORED);
-        assertThat(client.lastAck().getCurrentVersion()).isEqualTo(3L);
+        assertThat(harness.client.lastAck().getStatus())
+                .isEqualTo(DdcAckStatus.SUCCESS);
+        assertThat(harness.repository.version("application.yml"))
+                .isEqualTo(2L);
     }
 
     @Test
-    void malformedTargetMessageDoesNotApplyOrAck() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        AtomicInteger applyCount = new AtomicInteger();
-        DdcRefreshService service = service(new DdcLocalConfigRepository(),
-                (key, value, version) -> applyCount.incrementAndGet(), client);
-        DdcPublishMessage message = message("switch", "on", 2L);
-        message.setContentChecksum(null);
+    void nonTargetAndMalformedResourcesDoNotApplyOrAck()
+            throws Exception {
+        Harness harness = harness(registry -> {
+        });
+        DdcPublishMessage nonTarget = harness.message(
+                "feature:\n  enabled: true\n",
+                2L
+        );
+        nonTarget.setTargets(List.of(
+                new DdcPublishTarget("other", "other-lease")
+        ));
+        harness.service.refresh(nonTarget);
 
-        service.refresh(message);
+        DdcPublishMessage wrongType = harness.message(
+                "feature:\n  enabled: true\n",
+                2L
+        );
+        wrongType.setValueType("TXT");
+        harness.service.refresh(wrongType);
 
-        assertThat(applyCount).hasValue(0);
-        assertThat(client.ackCount).isZero();
+        assertThat(harness.client.ackCount).isZero();
+        assertThat(harness.events).isEmpty();
     }
 
     @Test
-    void reportsFailedAckWhenApplyFails() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcRefreshService service = service(new DdcLocalConfigRepository(), (key, value, version) -> {
-            throw new DdcException("convert config value failed");
-        }, client);
+    void ackTransportFailureDoesNotRollbackAcceptedYaml()
+            throws Exception {
+        Harness harness = harness(registry -> {
+        });
+        harness.client.failAck = true;
 
-        service.refresh(message("switch", "bad", 4L));
+        harness.service.refresh(harness.message("""
+                feature:
+                  enabled: true
+                """, 2L));
 
-        assertThat(client.lastAck().getStatus()).isEqualTo(DdcAckStatus.FAILED);
-        assertThat(client.lastAck().getErrorMessage()).contains("convert config value failed");
+        assertThat(harness.environment.getProperty(
+                "feature.enabled",
+                Boolean.class
+        )).isTrue();
+        assertThat(harness.repository.version("application.yml"))
+                .isEqualTo(2L);
     }
 
-    @Test
-    void applyFailureRestoresMetadataAndReturnsBoundedSingleLineError() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        String oldChecksum = DdcChecksum.content("old");
-        repository.updateVersion("switch", 2L);
-        repository.updateChecksum("switch", oldChecksum);
-        String detail = "unsafe\n" + "x".repeat(400);
-        DdcRefreshService service = service(repository, (key, value, version) -> {
-            repository.updateVersion(key, version);
-            repository.updateChecksum(key, DdcChecksum.content(value));
-            throw new IllegalStateException(detail);
-        }, client);
-
-        service.refresh(message("switch", "bad", 4L));
-
-        assertThat(repository.version("switch")).isEqualTo(2L);
-        assertThat(repository.checksum("switch")).isEqualTo(oldChecksum);
-        assertThat(client.lastAck().getStatus()).isEqualTo(DdcAckStatus.FAILED);
-        assertThat(client.lastAck().getErrorMessage())
-                .startsWith("DDC config apply failed")
-                .doesNotContain("\n", "\r", "IllegalStateException")
-                .hasSizeLessThanOrEqualTo(256);
+    private Harness harness(RegistryConfigurer configurer)
+            throws Exception {
+        DdcConfigurationPropertiesRebinder rebinder =
+                mock(DdcConfigurationPropertiesRebinder.class);
+        when(rebinder.rebind(any(), any())).thenReturn(Set.of());
+        return harness(configurer, rebinder, event -> {
+        });
     }
 
-    @Test
-    void sameVersionSnapshotWithDifferentChecksumKeepsLastKnownGoodValue() {
+    private Harness harness(
+            RegistryConfigurer configurer,
+            DdcConfigurationPropertiesRebinder rebinder,
+            ApplicationEventPublisher additionalPublisher)
+            throws Exception {
+        ConfigurableEnvironment environment = new MockEnvironment();
+        DdcDynamicPropertySource source =
+                new DdcYamlPropertySourceLoader().load(
+                        "application.yml",
+                        INITIAL_YAML,
+                        1L
+                );
+        environment.getPropertySources().addFirst(source);
+        DdcLocalConfigRepository repository =
+                new DdcLocalConfigRepository();
+        DdcFieldBindingService fieldBindingService =
+                new DdcFieldBindingService(
+                        repository,
+                        new DdcValueConverter(),
+                        environment
+                );
+        DefaultDdcConfigApplierRegistry registry =
+                new DefaultDdcConfigApplierRegistry(
+                        fieldBindingService::apply
+                );
+        configurer.configure(registry);
+        registry.freeze();
+        List<DdcConfigurationChangedEvent> events =
+                new ArrayList<>();
+        DdcYamlConfigApplier applier = new DdcYamlConfigApplier(
+                environment,
+                registry,
+                fieldBindingService,
+                rebinder,
+                event -> {
+                    events.add((DdcConfigurationChangedEvent) event);
+                    additionalPublisher.publishEvent(event);
+                },
+                1024 * 1024
+        );
         RecordingAdminClient client = new RecordingAdminClient();
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        repository.updateVersion("switch", 2L);
-        String oldChecksum = DdcChecksum.content("old");
-        repository.updateChecksum("switch", oldChecksum);
-        AtomicInteger applyCount = new AtomicInteger();
-        DdcRefreshService service = service(repository, (key, value, version) ->
-                applyCount.incrementAndGet(), client);
-
-        service.applySnapshot(config("switch", "new", 2L));
-
-        assertThat(applyCount).hasValue(0);
-        assertThat(repository.version("switch")).isEqualTo(2L);
-        assertThat(repository.checksum("switch")).isEqualTo(oldChecksum);
-        assertThat(client.ackCount).isZero();
-    }
-
-    @Test
-    void ackTransportFailureDoesNotRollbackAppliedValueOrVersion() {
-        RecordingAdminClient client = new RecordingAdminClient();
-        client.failAck = true;
-        DdcLocalConfigRepository repository = new DdcLocalConfigRepository();
-        AtomicReference<String> value = new AtomicReference<>();
-        DdcRefreshService service = service(repository, (key, next, version) -> {
-            value.set(next);
-            repository.updateVersion(key, version);
-        }, client);
-
-        service.refresh(message("switch", "on", 2L));
-
-        assertThat(value).hasValue("on");
-        assertThat(repository.version("switch")).isEqualTo(2L);
-    }
-
-    private DdcRefreshService service(DdcLocalConfigRepository repository,
-                                      DdcConfigApplier applier,
-                                      RecordingAdminClient client) {
-        return new DdcRefreshService(repository, applier, client, sessionHolder());
+        DdcRefreshService service = new DdcRefreshService(
+                repository,
+                applier,
+                client,
+                sessionHolder()
+        );
+        return new Harness(
+                environment,
+                repository,
+                client,
+                service,
+                applier,
+                events
+        );
     }
 
     private DdcLeaseSessionHolder sessionHolder() {
@@ -299,7 +369,7 @@ class DdcRefreshServiceTest {
         holder.replace(new DdcLeaseSession(
                 "instance-1",
                 "lease-1",
-                DdcLeaseRole.CONFIG_CLIENT,
+                top.egon.cola.component.ddc.model.enums.DdcLeaseRole.CONFIG_CLIENT,
                 30,
                 10,
                 registeredAt,
@@ -308,29 +378,49 @@ class DdcRefreshServiceTest {
         return holder;
     }
 
-    private DdcPublishMessage message(String key, String value, long version) {
-        DdcPublishMessage message = new DdcPublishMessage();
-        message.setChangeId("c1");
-        message.setBizCode("retail");
-        message.setAppCode("demo");
-        message.setEnv("dev");
-        message.setConfigKey(key);
-        message.setConfigValue(value);
-        message.setTargetVersion(version);
-        message.setContentChecksum(DdcChecksum.content(value));
-        message.setTargets(List.of(new DdcPublishTarget("instance-1", "lease-1")));
-        return message;
+    @FunctionalInterface
+    private interface RegistryConfigurer {
+
+        void configure(DefaultDdcConfigApplierRegistry registry);
     }
 
-    private DdcConfigValue config(String key, String value, long version) {
-        DdcConfigValue config = new DdcConfigValue();
-        config.setConfigKey(key);
-        config.setConfigValue(value);
-        config.setVersion(version);
-        return config;
+    private record Harness(
+            ConfigurableEnvironment environment,
+            DdcLocalConfigRepository repository,
+            RecordingAdminClient client,
+            DdcRefreshService service,
+            DdcYamlConfigApplier yamlConfigApplier,
+            List<DdcConfigurationChangedEvent> events
+    ) {
+
+        private DdcPublishMessage message(String yaml, long version) {
+            DdcPublishMessage message = new DdcPublishMessage();
+            message.setChangeId("change-1");
+            message.setBizCode("retail");
+            message.setAppCode("demo");
+            message.setEnv("dev");
+            message.setConfigKey("application.yml");
+            message.setConfigValue(yaml);
+            message.setValueType("YAML");
+            message.setTargetVersion(version);
+            message.setContentChecksum(DdcChecksum.content(yaml));
+            message.setTargets(List.of(
+                    new DdcPublishTarget("instance-1", "lease-1")
+            ));
+            return message;
+        }
+
+        private DdcConfigValue config(String yaml, long version) {
+            DdcConfigValue config = new DdcConfigValue();
+            config.setConfigKey("application.yml");
+            config.setConfigValue(yaml);
+            config.setValueType("YAML");
+            config.setVersion(version);
+            return config;
+        }
     }
 
-    static class RecordingAdminClient implements DdcAdminClient {
+    private static class RecordingAdminClient implements DdcAdminClient {
 
         private DdcAckRequest lastAck;
 
@@ -340,34 +430,22 @@ class DdcRefreshServiceTest {
 
         @Override
         public DdcLeaseSession register(DdcInstanceRegisterRequest request) {
-            Instant registeredAt = Instant.parse("2026-07-24T12:00:00Z");
-            return new DdcLeaseSession(
-                    request.getInstanceId(),
-                    "lease-1",
-                    DdcLeaseRole.CONFIG_CLIENT,
-                    30,
-                    10,
-                    registeredAt,
-                    registeredAt.plusSeconds(30)
-            );
+            return null;
         }
 
         @Override
         public DdcLeaseOperationResult heartbeat(DdcHeartbeatRequest request) {
-            return new DdcLeaseOperationResult(
-                    DdcLeaseOperationStatus.RENEWED,
-                    Instant.parse("2026-07-24T12:00:30Z")
-            );
+            return null;
         }
 
         @Override
         public DdcLeaseOperationResult offline(DdcHeartbeatRequest request) {
-            return new DdcLeaseOperationResult(DdcLeaseOperationStatus.DELETED, null);
+            return null;
         }
 
         @Override
         public List<DdcConfigValue> pull() {
-            return Collections.emptyList();
+            return List.of();
         }
 
         @Override
@@ -376,14 +454,14 @@ class DdcRefreshServiceTest {
 
         @Override
         public void ack(DdcAckRequest request) {
-            this.lastAck = request;
+            lastAck = request;
             ackCount++;
             if (failAck) {
                 throw new IllegalStateException("ack unavailable");
             }
         }
 
-        DdcAckRequest lastAck() {
+        private DdcAckRequest lastAck() {
             return lastAck;
         }
     }
